# keylogger

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
docs/: CMakeLists.txt  Doxyfile.in
include/io/udp/: udp_socket.h
include/recorder/: event_loop.h  recorder.h
scripts/: key_capture.py
scripts/linux/: build.sh  clean.sh  config.sh
scripts/windows/: build.bat  clean.bat  config.bat
src/: CMakeLists.txt  lib.rs  main.rs
src/io/: CMakeLists.txt
src/io/udp/: CMakeLists.txt  linux_udp_socket.cpp  udp_socket.cpp  windows_udp_socket.cpp
src/keylogger/: CMakeLists.txt  keylogger.cpp
src/recorder/: CMakeLists.txt  event_loop.cpp  recorder.cpp
tests/: CMakeLists.txt
tests/io/udp/: CMakeLists.txt  udp_socket_test.cpp
tests/recorder/: CMakeLists.txt  recorder_test.cpp
